fix bug with map on small screen

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -31,11 +31,17 @@
 
 #cluster-map {
     width: 100%;
-    height: 500px;
+    height: 450px;
 }
 
 .carousel-inner{
    width: 100%;
    height:100%;
 
+}
+
+@media only screen and (max-width: 1026px) {
+    #cluster-map {
+        display: none;
+    }
 }
